Fixed Dark Mode Toggle

--- a/css/main.scss
+++ b/css/main.scss
@@ -18,19 +18,26 @@ body {
     }
 }
 
-body {
-    .dark-theme {
-        --background: #1E1E1E;
-        --primary-text: #F4F4F4;
-        --secondary-text: #ABABAB;
-        --secondary-background: #181818;
-        img {
-            filter: invert(1);
-        }
+.dark-theme {
+    --background: #1E1E1E;
+    --primary-text: #F4F4F4;
+    --secondary-text: #ABABAB;
+    --secondary-background: #181818;
+    img {
+        filter: invert(1);
     }
 }
 
 @media (prefers-color-scheme: dark) {
+    .light-theme {
+        --background: #f4f4f4;
+        --primary-text: #202020;
+        --secondary-text: #ABABAB;
+        --secondary-background: #EEEEEE;
+        .invert-image {
+            filter: invert(0);
+        }
+    }
     body {
         --background: #1E1E1E;
         --primary-text: #F4F4F4;
@@ -38,17 +45,6 @@ body {
         --secondary-background: #181818;
         .invert-image {
             filter: invert(1);
-        }
-    }
-    body {
-        .light-theme {
-            --background: #f4f4f4;
-            --primary-text: #202020;
-            --secondary-text: #ABABAB;
-            --secondary-background: #EEEEEE;
-            .invert-image {
-                filter: invert(0);
-            }
         }
     }
 }
@@ -60,6 +56,7 @@ body {
     padding: 0;
     background-color: var(--background);
     color: var(--primary-text);
+    min-width: 340;
 }
 
 body {
@@ -245,14 +242,14 @@ hr.divider {
     margin-bottom: 30px;
 }
 
-@media only screen and (min-width: 366px) and (max-width: 600px) {
+@media only screen and (min-width: 381px) and (max-width: 600px) {
     .title {
         max-width: 10%;
         text-align: start;
     }
 }
 
-@media only screen and (max-width: 365px) {
+@media only screen and (max-width: 380px) {
     .title {
         text-align: start;
         padding-top: 20px;
@@ -414,17 +411,18 @@ footer {
             }
         }
     }
-    .color-toggle {
-        margin: 0;
-        background-color: var(--background);
-        border: 1px solid var(--secondary-text);
-        border-radius: 10px;
-        padding: 1px 15px;
-        padding-top: 3px;
-        text-align: center;
-        align-items: center;
-        font-size: 16px;
-        cursor: pointer;
-        transition: 300ms;
-    }
+}
+
+button {
+    margin: 0;
+    background-color: var(--background);
+    border: 1px solid var(--secondary-text);
+    border-radius: 10px;
+    padding: 1px 15px;
+    padding-top: 3px;
+    text-align: center;
+    align-items: center;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 300ms;
 }
